# hypso

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  deploy-site.yml  release.yml
assets/: hypso.desktop
examples/: build_site.rs  gallery.rs  logo.rs  site.rs
openspec/changes/archive/2026-07-03-landing-downloads-motion/: design.md  tasks.md
openspec/changes/archive/2026-07-03-landing-page-site/: proposal.md
openspec/changes/archive/2026-07-03-landing-page-site/specs/landing-page/: spec.md
openspec/changes/archive/2026-07-03-landing-page-site/specs/live-hero/: spec.md
openspec/changes/archive/2026-07-03-landing-page-site/specs/site-build-deploy/: spec.md
openspec/changes/archive/2026-07-03-topographic-wallpaper-generator/specs/image-effects/: spec.md
openspec/changes/archive/2026-07-03-topographic-wallpaper-generator/specs/interactive-editor/: spec.md
openspec/changes/archive/2026-07-03-topographic-wallpaper-generator/specs/wallpaper-composition/: spec.md
openspec/changes/archive/2026-07-07-landing-island-redesign/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-07-landing-island-redesign/specs/landing-page/: spec.md
openspec/changes/archive/2026-07-07-landing-island-redesign/specs/live-hero/: spec.md
openspec/changes/landing-downloads-motion/: proposal.md
openspec/changes/landing-downloads-motion/specs/landing-page/: spec.md
openspec/changes/landing-downloads-motion/specs/live-hero/: spec.md
openspec/changes/landing-page-site/: design.md  tasks.md
openspec/changes/landing-page-site/specs/wasm-generator/: spec.md
openspec/changes/topographic-wallpaper-generator/: design.md  proposal.md  tasks.md
openspec/changes/topographic-wallpaper-generator/specs/image-effects/: spec.md
openspec/changes/topographic-wallpaper-generator/specs/interactive-editor/: spec.md
openspec/changes/topographic-wallpaper-generator/specs/pattern-generation/: spec.md
openspec/changes/topographic-wallpaper-generator/specs/png-export/: spec.md
openspec/changes/topographic-wallpaper-generator/specs/text-reservation/: spec.md
openspec/specs/image-effects/: spec.md
openspec/specs/interactive-editor/: spec.md
openspec/specs/landing-page/: spec.md
openspec/specs/live-hero/: spec.md
openspec/specs/pattern-generation/: spec.md
openspec/specs/png-export/: spec.md
openspec/specs/site-build-deploy/: spec.md
openspec/specs/text-reservation/: spec.md
openspec/specs/wallpaper-composition/: spec.md
openspec/specs/wasm-generator/: spec.md
src/: config.rs  contour.rs  export.rs  format.rs  geom.rs  grain.rs  lib.rs  main.rs  noise.rs  preset.rs  raster.rs  render.rs  smooth.rs  stroke.rs  svg.rs  text_zone.rs  util.rs  wasm.rs
ui/: app.slint
web/: index.html  robots.txt  site.webmanifest  sitemap.xml
web/css/: style.css
web/js/: main.js
